# advent_of_code

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
advent_of_code/2015/1_not_quite_lisp/: problem.md  solution.py
advent_of_code/2015/2_no_math/: problem.md  solution.py
advent_of_code/2015/3_spherical_houses/: problem.md  solution.py
advent_of_code/2015/4_ideal_stocking/: problem.md  solution.py
advent_of_code/2024/1_historian_hysteria/: problem.md  solution.py
advent_of_code/2024/3_mull_it_over/: problem.md  solution.py
advent_of_code/2024/4_ceres_search/: problem.md  solution.py
advent_of_code/2024/5_print_queue/: problem.md  solution.py
