[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Darshan A S <itisdarshan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
toolz = "^0.12.1"
pyfunctional = "^1.5.0"
sortedcontainers = "^2.4.0"
more-itertools = "^10.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.1.0"
bandit = "^1.7.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
