[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Darshan A S <itisdarshan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
toolz = "^1.0.0"
pyfunctional = "^1.5.0"
sortedcontainers = "^2.4.0"
more-itertools = "^10.5.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.1"
bandit = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
